# gf-cost-compare

./: .gitignore  .python-version  LICENSE  README.md  authenticate.py  controller.py  data.json  product_controller.py  pyproject.toml  read_data.py  requirements.txt  test_controllers.py
.github/workflows/: github-ci.yml
grocery_api_client/: __init__.py
grocery_api_client/models/: __init__.py  location.py  product.py
grocery_api_client/services/: authentication_service.py  locations_service.py  products_service.py
grocery_api_client/services/helpers/: constants.py  helpers.py
grocery_api_client/utils/: exc.py
kroger_api_client/services/: authentication_service.py  products_service.py
models/: product.py
tests/: conftest.py  mock_modules.py
tests/functional/: test_locations_service.py  test_product_controller.py  test_products_service.py
tests/test_data/: chains.py  locations.py  products.py
